
==== Breaking changes

==== Bug fixes

- Accept charset in request's content type {pull}677[677].
- Use type integer instead of number in JSON schemas where applicable {pull}641[641].
- Set array item types to string in JSON schemas {pull}651[651].

==== Added

- Enriched data with IP and UserAgent {pull}393[393], {pull}701[701].

==== Deprecated

==== Known Issues




=== APM Server version 6.2
https://github.com/elastic/apm-server/compare/71df0d96445df35afe27f38bcf734a0828e0761d\...4daa36bd5c144cf9182afc62dc8042af663756c6[View commits]

==== Breaking changes
- Renaming and reverse boolean `in_app` to `library_frame` {pull}385[385].
- Renaming `app` to `service` {pull}377[377]
- Move `trace.transaction_id` to `transaction.id` {pull}345[345], {pull}347[347], {pull}371[371]
- Renaming `trace` to `span` {pull}352[352].
- Renaming and reverse boolean `exception.uncaught` to `exception.handled` {pull}434[434].
- Move process related fields to their own namespace {pull}445[445].
- Rename Kibana directories according to changed structure in beats framework. {pull}454[454]
- Change config option `max_header_bytes` to `max_header_size` {pull}492[492].
- Change config option `frontend.sourcemapping.index` to `frontend.source_mapping.index_pattern` and remove adding a '*' by default.{pull}492[492].
- Remove untested config options from config yml files {pull}[]
- Remove untested config options from config yml files {pull}496[496]

==== Bug fixes
- Updated systemd doc url {pull}354[354]
- Updated readme doc urls {pull}356[356]
- Use updated stack trace frame values for calculating error `grouping_keys` {pull}485[485]
- Fix panic when a signal is delivered before the server is instantiated {pull}580[580]

==== Added
- service.environment {pull}366[366]
- Consider exception or log message for grouping key when nothing else is available {pull}435[435]
- Add context.request.url.full {pull}436[436]
- Report more detail on max data size error {pull}442[442]